--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
-  "name": "form",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-context-menu": "^2.2.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-three/fiber": "^9.3.0",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/three": "^0.178.1",
-    "@xyflow/react": "^12.8.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "d3": "^7.9.0",
-    "lucide-react": "^0.536.0",
-    "motion": "^12.23.12",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-resizable-panels": "^3.0.4",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "three": "^0.179.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@types/d3": "^7.4.3",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.32.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
-  }
+	"name": "form",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-context-menu": "^2.2.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-hover-card": "^1.1.14",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-menubar": "^1.1.15",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-scroll-area": "^1.2.9",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-switch": "^1.2.5",
+		"@radix-ui/react-toggle": "^1.1.9",
+		"@radix-ui/react-toggle-group": "^1.1.10",
+		"@radix-ui/react-tooltip": "^1.2.7",
+		"@react-three/fiber": "^9.3.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"@types/three": "^0.178.1",
+		"@xyflow/react": "^12.8.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"d3": "^7.9.0",
+		"lucide-react": "^0.536.0",
+		"motion": "^12.23.12",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
+		"react-resizable-panels": "^3.0.4",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.11",
+		"three": "^0.179.1"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.32.0",
+		"@playwright/test": "^1.47.2",
+		"@types/d3": "^7.4.3",
+		"@types/node": "^24.1.0",
+		"@types/react": "^19.1.9",
+		"@types/react-dom": "^19.1.7",
+		"@vitejs/plugin-react": "^4.7.0",
+		"eslint": "^9.32.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"globals": "^16.3.0",
+		"tw-animate-css": "^1.3.6",
+		"typescript": "~5.8.3",
+		"typescript-eslint": "^8.38.0",
+		"vite": "^5.4.19"
+	}
 }
