--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"docs:dev": "vitepress dev docs",
+		"docs:build": "vitepress build docs",
+		"docs:preview": "vitepress preview docs",
+		"docs:check": "markdownlint \"**/*.md\" && linkinator docs --recurse",
+		"api:docs": "typedoc --options typedoc.json"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "^6.3.1",
@@ -22,6 +27,7 @@
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.2.5",
+		"@radix-ui/react-tabs": "^1.1.12",
 		"@radix-ui/react-toggle": "^1.1.9",
 		"@radix-ui/react-toggle-group": "^1.1.10",
 		"@radix-ui/react-tooltip": "^1.2.7",
@@ -57,6 +63,10 @@
 		"tw-animate-css": "^1.3.6",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.38.0",
-		"vite": "^5.4.19"
+		"vite": "^5.4.19",
+		"vitepress": "^1.3.4",
+		"markdownlint-cli": "^0.41.0",
+		"linkinator": "^6.0.3",
+		"typedoc": "^0.26.11"
 	}
 }
