--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
+		"test": "vitest run",
 		"docs:dev": "vitepress dev docs",
 		"docs:build": "vitepress build docs",
 		"docs:preview": "vitepress preview docs",
@@ -46,7 +47,8 @@
 		"react-resizable-panels": "^3.0.4",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
-		"three": "^0.179.1"
+		"three": "^0.179.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.32.0",
@@ -64,6 +66,7 @@
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.38.0",
 		"vite": "^5.4.19",
+		"vitest": "^2.0.5",
 		"vitepress": "^1.3.4",
 		"markdownlint-cli": "^0.41.0",
 		"linkinator": "^6.0.3",
