--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"docs:build": "vitepress build docs",
 		"docs:preview": "vitepress preview docs",
 		"docs:check": "markdownlint \"**/*.md\" && linkinator docs --recurse",
-		"api:docs": "typedoc --options typedoc.json"
+		"api:docs": "typedoc --options typedoc.json",
+		"generate:adapters": "tsx scripts/generate-drei-registry.ts"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "^6.3.1",
@@ -32,6 +33,7 @@
 		"@radix-ui/react-toggle": "^1.1.9",
 		"@radix-ui/react-toggle-group": "^1.1.10",
 		"@radix-ui/react-tooltip": "^1.2.7",
+		"@react-three/drei": "^10.6.1",
 		"@react-three/fiber": "^9.3.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/three": "^0.178.1",
@@ -62,14 +64,15 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"globals": "^16.3.0",
+		"linkinator": "^6.0.3",
+		"markdownlint-cli": "^0.41.0",
+		"tsx": "^4.20.4",
 		"tw-animate-css": "^1.3.6",
+		"typedoc": "^0.26.11",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.38.0",
 		"vite": "^5.4.19",
-		"vitest": "^2.0.5",
 		"vitepress": "^1.3.4",
-		"markdownlint-cli": "^0.41.0",
-		"linkinator": "^6.0.3",
-		"typedoc": "^0.26.11"
+		"vitest": "^2.0.5"
 	}
 }
