--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@codemirror/lang-javascript": "^6.2.4",
 		"@eslint/js": "^9.32.0",
 		"@playwright/test": "^1.47.2",
 		"@types/d3": "^7.4.3",
 		"@types/node": "^24.1.0",
 		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.7",
+		"@uiw/react-codemirror": "^4.25.1",
 		"@vitejs/plugin-react": "^4.7.0",
 		"eslint": "^9.32.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
