--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 20
           cache: npm
       - run: npm ci
+        env:
+          npm_config_legacy_peer_deps: 'true'
       - run: npm run docs:build
       - run: npm run api:docs
       - run: npm run docs:check
