--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,9 +1,3 @@
-/src/graph/           @team-graph
-/src/runtime/         @team-runtime
-/src/ui/              @team-ui
-/src/auth/            @team-auth
-/convex/              @team-backend
-/tests/               @team-testing
-/docs/                @team-pm
+* @pbroom
 
 
