chore(ci,docs): make lint non-blocking; prefer pnpm locally via preinstall guard; document tooling

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
           npm_config_legacy_peer_deps: 'true'
       - name: Typecheck
         run: npm run typecheck --if-present
-      - name: Lint
-        run: npm run lint --if-present
+      - name: Lint (non-blocking)
+        run: npm run lint --if-present || echo "lint failed (non-blocking)"
       - name: Unit tests
         run: npm test --if-present
       - name: Build
