--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"preinstall": "node -e \"if (!process.env.CI && process.env.npm_execpath && !process.env.npm_execpath.includes('pnpm')) { console.error('Please use pnpm (npm i -g pnpm)'); process.exit(1) }\"",
+		"preinstall": "node -e \"const ua=process.env.npm_config_user_agent||''; const ep=process.env.npm_execpath||''; const ok=ua.includes('pnpm')||ua.includes('bun')||ep.includes('pnpm')||ep.includes('bun'); if (!process.env.CI && !ok) { console.error('Please use pnpm or bun'); process.exit(1) }\"",
 		"dev": "concurrently -c auto -n convex,vite \"pnpm convex:dev\" \"vite\"",
 		"vite:dev": "vite",
 		"build": "tsc -b && vite build",
@@ -24,6 +24,7 @@
 		"@convex-dev/eslint-plugin": "0.0.1-alpha.4",
 		"@dnd-kit/core": "^6.3.1",
 		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-context-menu": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-hover-card": "^1.1.14",
@@ -35,14 +36,14 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.2.5",
 		"@radix-ui/react-tabs": "^1.1.12",
-		"@radix-ui/react-toggle": "^1.1.9",
-		"@radix-ui/react-toggle-group": "^1.1.10",
+		"@radix-ui/react-toggle": "^1.1.10",
+		"@radix-ui/react-toggle-group": "^1.1.11",
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@react-three/drei": "^10.6.1",
 		"@react-three/fiber": "^9.3.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/three": "^0.178.1",
-		"@xyflow/react": "^12.8.2",
+		"@xyflow/react": "^12.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -60,7 +61,6 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"concurrently": "^9.1.2",
 		"@codemirror/lang-javascript": "^6.2.4",
 		"@eslint/js": "^9.32.0",
 		"@playwright/test": "^1.47.2",
@@ -70,6 +70,7 @@
 		"@types/react-dom": "^19.1.7",
 		"@uiw/react-codemirror": "^4.25.1",
 		"@vitejs/plugin-react": "^4.7.0",
+		"concurrently": "^9.1.2",
 		"eslint": "^9.32.0",
 		"eslint-plugin-react-compiler": "19.1.0-rc.2",
 		"eslint-plugin-react-hooks": "^5.2.0",
